<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/placeholder_keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintBottom_toBottomOf="parent" />

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        mapbox:layout_constraintBottom_toTopOf="@id/nav_view"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="47.184"
        mapbox:mapbox_cameraTargetLng="19.512"
        mapbox:mapbox_cameraZoom="6">

    </com.mapbox.mapboxsdk.maps.MapView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/center_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        mapbox:backgroundTint="@android:color/white"
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="@+id/mapView"
        mapbox:srcCompat="@drawable/ic_my_location_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/compass_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        mapbox:backgroundTint="@android:color/white"
        mapbox:layout_constraintBottom_toTopOf="@+id/center_map"
        mapbox:layout_constraintEnd_toEndOf="@+id/center_map" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/windowBackground"
        android:visibility="visible"
        mapbox:layout_constraintBottom_toTopOf="@+id/nav_view"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <Space
            android:id="@+id/placeholder_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/SearchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FilterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/filter" />

            <LinearLayout
                android:id="@+id/distanceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_distance" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kilometer" />

                    <Button
                        android:id="@+id/search_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Switch
            android:id="@+id/auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/auto"
            android:visibility="gone"
            tools:visibility="visible" />

        <Switch
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:visibility="gone"
            tools:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:itemCount="10"
            tools:listitem="@layout/items">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:itemCount="10"
            tools:listitem="@layout/items">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        mapbox:labelVisibilityMode="labeled"
        mapbox:layout_constraintBottom_toTopOf="@+id/placeholder_keyboard"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:menu="@menu/bottom_nav_menu">

    </android.support.design.widget.BottomNavigationView>

    <!--<ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        mapbox:layout_constraintBottom_toTopOf="@+id/nav_view"
        mapbox:layout_constraintEnd_toEndOf="parent" />-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/alert_light_frame"
        android:visibility="invisible"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dialog"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/primary_text_light"
            android:textSize="24sp"
            android:textStyle="bold"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/googlemaps" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/secondary_text_dark"
            mapbox:layout_constraintStart_toStartOf="@+id/name"
            mapbox:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/secondary_text_dark"
            mapbox:layout_constraintStart_toStartOf="@+id/name"
            mapbox:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/secondary_text_dark"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.0"
            mapbox:layout_constraintStart_toStartOf="@+id/address"
            mapbox:layout_constraintTop_toBottomOf="@+id/category" />

        <Button
            android:id="@+id/googlemaps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/googlemaps"
            mapbox:layout_constraintEnd_toStartOf="@+id/close"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
